--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,6 +1,18 @@
 * {
-  margin: 3px;
+  margin: 4px;
 }
 .navbar-text:hover {
   text-decoration: underline;
+}
+
+.bucketListDiv{
+  margin: auto;
+  padding: 5px;
+  height: 700px;
+  width: 1000px;
+}
+
+img {
+  width: 70%;
+  height: 70%;
 }
