--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -8,11 +8,17 @@
 .bucketListDiv{
   margin: auto;
   padding: 5px;
-  height: 700px;
-  width: 1000px;
 }
 
 img {
-  width: 70%;
-  height: 70%;
+  width: 40%;
+  height: 40%;
+}
+
+.btn{
+margin: 5px;
+}
+
+.form-control{
+  width: 350px;
 }
