--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,8 +1,5 @@
 * {
   margin: 4px;
-  margin-left: 30px;
-  margin-right: 30px;
-  text-align: center;
 }
 
 body{
@@ -18,6 +15,11 @@ img {
   height: 40%;
 }
 
+.centre{
+  margin-left: 30px;
+  margin-right: 30px;
+  text-align: center;
+}
 
 .navbar{
   margin: auto;
