--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -8,6 +8,7 @@ body{
 
 h1{
   text-align: center;
+  color: #013944;
 }
 
 img {
@@ -23,27 +24,25 @@ img {
 
 .navbar{
   margin: auto;
-  width: 80%
+  width: 80%;
+}
+
+.navbar-text{
+   color: #015c6e;
 }
 
 .navbar-text:hover {
-  color: #212529;
+  color: #013944;
   cursor: default;
-}
-
-.bucketListDiv{
-  margin: auto;
-  padding: 10px;
-  text-align: center;
 }
 
 .home-page-div{
   margin: auto;
   padding: 10px;
   text-align: center;
-  border: 1px solid black;
   width: 500px;
   height: 400px;
+  border: 1px solid black;
 }
 
 .btn{
@@ -60,13 +59,16 @@ margin: 5px;
   text-align: center;
 }
 
-.bucketListDiv {
-  border: 1px solid #000;
+.bucketListDiv{
+  margin: auto;
+  padding: 10px;
+  text-align: center;
+  width: 60%;
+  height: 60%;
   transition: transform 0.3s ease;
 }
 
 .bucketListDiv:hover {
-  border-color: rgb(117, 116, 116);
   transform: scale(1.01);
 }
 
