--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,5 +1,6 @@
 * {
   margin: 4px;
+  color: #013944;
 }
 
 body{
@@ -8,7 +9,7 @@ body{
 
 h1{
   text-align: center;
-  color: #013944;
+
 }
 
 img {
@@ -42,11 +43,13 @@ img {
   text-align: center;
   width: 500px;
   height: 400px;
-  border: 1px solid black;
+  border: 1px solid #15515e;
 }
 
 .btn{
 margin: 5px;
+color: #013944;
+border-color:#013944;
 }
 
 .form-control{
