addng styling changes to header and nav

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -9,7 +9,6 @@ body{
 
 h1{
   text-align: center;
-
 }
 
 img {
@@ -35,6 +34,10 @@ img {
 .navbar-text:hover {
   color: #013944;
   cursor: default;
+}
+
+.border-bottom{
+  margin-bottom: 10px;
 }
 
 .home-page-div{
