--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -55,6 +55,10 @@ color: #013944;
 border-color:#013944;
 }
 
+.btn:hover{
+  background-color: #013944;
+}
+
 .form-control{
   width: 350px;
 }
@@ -71,11 +75,14 @@ border-color:#013944;
   text-align: center;
   width: 60%;
   height: 60%;
-  transition: transform 0.3s ease;
 }
 
-.bucketListDiv:hover {
-  transform: scale(1.01);
+.bucketListDiv >img{
+  transition: transform 0.5s ease;
+}
+
+.bucketListDiv >img:hover {
+  transform: scale(1.02);
 }
 
 .img-div > img{
