--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -16,6 +16,11 @@ img {
   height: 40%;
 }
 
+footer{
+  font-size: 12px;
+  margin-top: 50px;
+}
+
 .centre{
   margin-left: 100px;
   margin-right: 100px;
